examples/errors/parsing/functions-missing-bar.cn
fun double : int -> int [pure] = {
  x -> x + x
  y -> y + y
}

main : () [impure] = ()
